bean test fixes